# matcha

./: .darglint  .flake8  .gitignore  .pre-commit-config.yaml  .typos.toml  404.html  CNAME  CONTRIBUTING.md  DEVELOPMENT.md  PRE-COMMIT_SETUP.MD  README.md  README.md~  RELEASE_NOTES.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  scratch.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  docs.yml
azure-permissions/: index.html
costings/: index.html
css/: extra.css
data-version-control/: index.html
docs/: CNAME  azure-permissions.md  costings.md  data-version-control.md  data_version_control.md  getting-started.md  index.md  inside-matcha.md  mlops-principles.md  privacy.md  references.md  resource-stacks.md  resources.md  workflows.md
docs/css/: extra.css
docs/source/: azure_permissions.rst  cli.rst  conf.py  examples.rst  getting_started.rst  index.rst
getting-started/: index.html
inside-matcha/: index.html
privacy/: index.html
references/: index.html
resource-stacks/: index.html
src/infrastructure/: .terraform.lock.hcl  README.md  main.tf  output.tf  variables.tf
src/infrastructure/aks/: aks.tf  main.tf  output.tf  variables.tf
src/infrastructure/database/: main.tf  mysql_flexible_server.tf  output.tf  variables.tf
src/infrastructure/mlflow/: configure_kubectl.tf  helm.tf  mlflow.tf  variables.tf
src/infrastructure/mlflow-module/: getURI.tf  ingress.tf  mlflow.tf  output.tf  providers.tf  secret.tf  variables.tf
src/infrastructure/resource_group/: main.tf  output.tf  variables.tf
src/infrastructure/storage/: output.tf  providers.tf
src/matcha_ml/: __init__.py  constants.py  errors.py
src/matcha_ml/cli/: __init__.py  _validation.py  analytics.py  cli.py  constants.py  destroy.py  experiment_tracker.py  get.py  prefix_validation.py  provision.py  region_validation.py  run.py
src/matcha_ml/cli/common_ui_primitives/: ui_functions.py
src/matcha_ml/cli/resources/: experiment_tracker.py  resource_group.py
src/matcha_ml/cli/ui/: emojis.py  functions.py  print_messages.py  resource_message_builders.py  spinner.py  status_message_builders.py  user_approval_functions.py
src/matcha_ml/cli/ui_primitives/: ui_functions.py
src/matcha_ml/config/: __init__.py  matcha_config.py
src/matcha_ml/core/: __init__.py  _validation.py  core.py
src/matcha_ml/infrastructure/: .gitignore  README.md  configure_kubectl.tf  helm.tf  kubernetes.tf  main.tf  output.tf  providers.tf  variables.tf
src/matcha_ml/infrastructure/aks/: README.md  main.tf  output.tf  variables.tf
src/matcha_ml/infrastructure/azure_container_registry/: README.md  acr.tf  main.tf  output.tf  variables.tf
src/matcha_ml/infrastructure/default/: .terraform.lock.hcl  main.tf  output.tf
src/matcha_ml/infrastructure/llm/: .terraform.lock.hcl  README.md  main.tf  output.tf  printf.cmd  variables.tf
src/matcha_ml/infrastructure/mlflow-module/: configure_kubectl.tf  helm.tf  variables.tf
src/matcha_ml/infrastructure/mlflow_module/: README.md  configure_kubectl.tf  getURI.tf  kubernetes.tf  locals.tf  main.tf  output.tf  providers.tf  variables.tf  zenml_namespace.tf
src/matcha_ml/infrastructure/remote_state_storage/: .terraform.lock.hcl  main.tf  output.tf  variables.tf
src/matcha_ml/infrastructure/resource_group/: README.md  output.tf  variables.tf
src/matcha_ml/infrastructure/resources/: .terraform.lock.hcl  README.md  main.tf  output.tf  providers.tf  variables.tf
src/matcha_ml/infrastructure/seldon/: README.md  getURI.tf  istio.tf  main.tf  outputs.tf  permissions.tf  providers.tf  seldon.tf  variables.tf
src/matcha_ml/infrastructure/storage/: README.md  main.tf  output.tf  variables.tf
src/matcha_ml/infrastructure/zen_server/: README.md  configure_kube_config_path.tf  getURL.tf  ingress.tf  main.tf  outputs.tf  providers.tf  sql.tf  variables.tf  zen_server.tf
src/matcha_ml/infrastructure/zenml_storage/: main.tf  output.tf  variables.tf
src/matcha_ml/runners/: __init__.py  azure_runner.py  base_runner.py  remote_state_runner.py
src/matcha_ml/services/: __init__.py  _validation.py  analytics_service.py  azure_service.py  global_config_service.py  global_parameters_service.py  matcha_state.py  terraform_service.py
src/matcha_ml/services/azure/: azure_service.py  test_azure_service_class.py
src/matcha_ml/state/: __init__.py  matcha_state.py  remote_state_manager.py
src/matcha_ml/storage/: __init__.py  azure_storage.py
src/matcha_ml/templates/: __init__.py  azure_template.py  base_template.py  remote_state_template.py  run_state_storage_template.py  run_template.py
src/matcha_ml/templates/azure_template/: azure_template.py  run_azure_template.py
src/matcha_ml/templates/build_template/: azure_template.py
tests/: conftest.py  test_dummy.py
tests/test_cli/: conftest.py  test_analytics.py  test_cli.py  test_destroy.py  test_force_unlock.py  test_get.py  test_provision.py  test_region_validation.py  test_run.py  test_stack.py  test_ui_functions.py  test_validation.py
tests/test_cli/test_ui_primitives/: test_print_messages.py  test_spinner.py  test_status_message_builders.py  test_ui_functions.py
tests/test_config/: test_matcha_config.py
tests/test_core/: conftest.py  test_core.py  test_core_destroy.py  test_core_provision.py  test_core_validation.py  test_stack_set.py
tests/test_runners/: conftest.py  test_azure_runner.py  test_base_runner.py  test_remote_state_runner.py
tests/test_services/: __init__.py  conftest.py  test_analytics_service.py  test_azure_service.py  test_global_config_service.py  test_global_parameters_service.py  test_matcha_state.py  test_terraform_service.py  test_validation.py
tests/test_state/: conftest.py  test_matcha_state.py  test_remote_state_manager.py
tests/test_storage/: test_azure_storage.py
tests/test_templates/: conftest.py  test_azure_template.py  test_base_template.py  test_run_azure_template.py  test_run_state_storage_template.py  test_run_template.py  test_state_storage_template.py
workflows/: index.html
(+92 files in other folders)
