[tool.poetry]
name = "matcha-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0 license"
readme = "README.md"
packages = [{include = "matcha_ml", from = "src"}]

[tool.poetry.scripts]
matcha = "matcha_ml.cli.cli:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[tool.poetry.group.doc.dependencies]
sphinx = "^6.1.3"
sphinx-autobuild = "^2021.3.14"
myst-parser = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
show_error_codes = true
exclude = ["docs", "test"]
strict = true
disallow_untyped_decorators = false
