[tool.poetry]
name = "matcha-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0 license"
readme = "README.md"
packages = [{include = "matcha_ml", from = "src"}]
exclude = [
    "tests.*",
    "*.tests",
    "docs",
    "tests",
    "tests",
    "legacy",
    "*.tests.*",
    "examples"
]

[tool.poetry.scripts]
matcha = "matcha_ml.cli.cli:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.7.0"}
python-terraform = "^0.10.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
show_error_codes = true
exclude = ["docs", "test"]
strict = true
disallow_untyped_decorators = false  # ignore functions using decorators
ignore_missing_imports = true  # silence all import errors related to untyped libraries

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.isort]
profile = "black"
known_third_party = []
skip_glob = []
line_length = 88

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = false
fail-under = 95
exclude = ["setup.py", "docs", "build", "tests"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 1
quiet = false
whitelist-regex = []
color = true
